# cpp-project-template

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
apps/: main.cpp
include/libname/: hello_world.h
src/: CMakeLists.txt  hello_world.cpp
tests/: CMakeLists.txt  example_test.cpp  main.cpp
tests/src/: example_test.cpp
