set(LIBRARY_NAME "${PROJECT_NAME}")

#Configure paths
set(LIBRARY_MODULE_PATH  "${PROJECT_SOURCE_DIR}/src")
set(LIBRARY_SRC_PATH     "${LIBRARY_MODULE_PATH}")
set(LIBRARY_INCLUDE_PATH "${LIBRARY_MODULE_PATH}")

include_directories(${LIBRARY_INCLUDE_PATH})

file(GLOB_RECURSE LIB_HEADER_FILES "${LIBRARY_INCLUDE_PATH}/*.h")
file(GLOB_RECURSE LIB_SOURCE_FILES "${LIBRARY_SRC_PATH}/*.cpp")

add_library(${LIBRARY_NAME} STATIC ${LIB_SOURCE_FILES} ${LIB_HEADER_FILES})

set( LIBRARY_INCLUDE_PATH ${LIBRARY_INCLUDE_PATH} PARENT_SCOPE)
set( LIBRARY_NAME ${LIBRARY_NAME} PARENT_SCOPE)

enable_testing()
